Kubernetes/apache-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: apache-pod
  labels:
    app: apache
spec:
  containers:
    - name: apache-container
      image: httpd:alpine
      ports:
        - containerPort: 80
