Kubernetes/nginx-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      name: nginx-pod
      labels:
          app: nginx
    spec:
      containers:
        - name: nginx-container
          image: nginx
          ports:
            - containerPort: 80
